# flask-file-server

./: .gitignore  Dockerfile  file_server.py  pyproject.toml
.github/workflows/: production.yml
assets/css/: custom.css
templates/: index.html
