[tool.poetry]
name = "flask-file-server"
version = "0.1.0"
description = "Flask server to serve and upload static files"
authors = ["Mario <mariohdpz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
humanize = "^2.6.0"
pathlib2 = "^2.3.5"
python-dotenv = "^0.14.0"
werkzeug = "^1.0.1"
uwsgi = "^2.0.19"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
